--- a/src/Kampung/Kampung.fxml
+++ b/src/Kampung/Kampung.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="499.0" prefWidth="845.0" style="-fx-background-color: #142430;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Kampung.KampungController">
+<AnchorPane prefHeight="499.0" prefWidth="845.0" style="-fx-background-color: #142430;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Kampung.KampungController">
    <children>
       <AnchorPane prefHeight="499.0" prefWidth="845.0">
          <children>
@@ -23,10 +23,10 @@
                <children>
                   <AnchorPane layoutY="43.0" prefHeight="437.0" prefWidth="827.0" style="-fx-background-color: white;">
                      <children>
-                        <TableView cacheShape="false" centerShape="false" focusTraversable="false" layoutX="306.0" layoutY="13.0" prefHeight="424.0" prefWidth="521.0" scaleShape="false">
+                        <TableView fx:id="tabel" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="306.0" layoutY="13.0" prefHeight="424.0" prefWidth="521.0" scaleShape="false">
                           <columns>
-                            <TableColumn prefWidth="155.0" text="C1" />
-                            <TableColumn minWidth="0.0" prefWidth="356.0" text="C2" />
+                            <TableColumn fx:id="kolid" prefWidth="155.0" text="C1" />
+                            <TableColumn fx:id="kolnama" minWidth="0.0" prefWidth="356.0" text="C2" />
                           </columns>
                         </TableView>
                         <Pane layoutX="306.0" prefHeight="40.0" prefWidth="521.0" style="-fx-background-color: black;">
@@ -50,7 +50,7 @@
                                     <Font name="System Bold Italic" size="14.0" />
                                  </font>
                               </Label>
-                              <JFXTextField prefHeight="36.0" prefWidth="277.0" />
+                              <JFXTextField fx:id="txtid" prefHeight="36.0" prefWidth="277.0" />
                            </children>
                         </VBox>
                         <VBox layoutX="14.0" layoutY="111.0" prefHeight="71.0" prefWidth="277.0">
@@ -60,10 +60,10 @@
                                     <Font name="System Bold Italic" size="14.0" />
                                  </font>
                               </Label>
-                              <JFXTextField prefHeight="36.0" prefWidth="277.0" />
+                              <JFXTextField fx:id="txtnama" prefHeight="36.0" prefWidth="277.0" />
                            </children>
                         </VBox>
-                        <JFXButton fx:id="btnsimpan" buttonType="RAISED" layoutX="8.0" layoutY="375.0" onMouseEntered="#mosenter1" onMouseExited="#mosexit1" prefHeight="40.0" prefWidth="90.0" style="-fx-background-color: black;" text="Save" textFill="WHITE">
+                        <JFXButton fx:id="btnsimpan" buttonType="RAISED" layoutX="8.0" layoutY="375.0" onAction="#simpan" onMouseEntered="#mosenter1" onMouseExited="#mosexit1" prefHeight="40.0" prefWidth="90.0" style="-fx-background-color: black;" text="Save" textFill="WHITE">
                            <font>
                               <Font name="System Bold Italic" size="13.0" />
                            </font>
